# OpenCVNativeAndroid

./: local.properties  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/androidTest/java/com/infostride/opencvnativeandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv-utils.cpp  opencv-utils.h
app/src/main/java/com/infostride/opencvnativeandroid/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/infostride/opencvnativeandroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
